# squiggleconf-2025

./: .eslintrc.json  .gitignore  CONTRIBUTORS.org  ISSUES.md  Makefile  README-BABEL.md  README.md  README.org  SETUP.md  SETUP.org  SYSTEM.md  SYSTEM.org  package.json  project.clj  pyproject.toml  schedule.org  squiggleconf-2025.el  squiggleconf-babel.el  tsconfig.json
networking/: boston-ts-club.org  michigan-typescript.org
sessions/: cross-browser-devtools.org  effect-type-safe-errors.org  electron-internal-tooling.org  index.org  jsr-package-registry.org  lockfiles-phd.org  make-tools-people-love.org  rolldown-vite-rust.org  typescript-to-go.org  zero-to-squiggle-lsp.org
speakers/: index.org
tools/demo-projects/jsr-demo/: jsr-resolution.ts  publish-jsr.sh
tools/demo-projects/version-display/: version-display.js
tools/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json
tools/emacs/: lint-org.el  tangle-org.el  validate-org.el
tools/scripts/: freebsd-deps-check.sh  install-linters.sh  tool-version-check.js
tutorials/: README.org
tutorials/go/: README.org
tutorials/go/debugging/: README.org
tutorials/go/src/: ast_inspector.go  memory_profiler.go  minimal_lsp.go  module_analyzer.go  pipeline_engine.go  plugin_system.go
tutorials/rust/: README.org
tutorials/rust/debugging/: README.org
tutorials/rust/src/: advanced_ownership.rs  parser_combinator.rs  proc_macros_demo.rs  zero_cost.rs
tutorials/typescript/: README.org
tutorials/typescript/debugging/: README.org
tutorials/zig/: README.org
(+17 files in other folders)
